--- a/.env.example
+++ b/.env.example
@@ -14,10 +14,9 @@ DB_STAGE_FILTER=LOI Backlog
 
 # --- Org Context (used in Gemini prompt) ---
 ORG_NAME=Your Nonprofit Name
-ORG_MISSION=providing STEM education to underserved youth
-ORG_STATE=NJ
-ORG_TARGET_CITIES=Newark, Camden, Jersey City, Elizabeth
-
+ORG_MISSION=Your Mission
+ORG_STATE=Your State
+ORG_TARGET_CITIES=Targetted Cities(if any)
 # --- Google Gemini API ---
 GEMINI_API_KEY=your_gemini_api_key_here
 
